...
    
    private func configureTableView() {
        tableView.dataSource = self
        tableView.delegate = self
        tableView.selectionFollowsFocus = false
        tableView.register(CardTableCell.self, forCellReuseIdentifier: CardTableCell.identifier)
        tableView.accessibilityIdentifier = "cardTable"
    }
    
    private func setupViews() {
        view.addSubview(tableView)
        tableView.translatesAutoresizingMaskIntoConstraints = false
        tableView.separatorColor = .white
        
        let addBarButtonItem = UIBarButtonItem(barButtonSystemItem: .add, target: self, action: #selector(addTapped))
        addBarButtonItem.accessibilityIdentifier = "addBarButtonItem"
        navigationItem.rightBarButtonItem = addBarButtonItem
        navigationItem.rightBarButtonItem?.tintColor = .black

        let leadingTableAnchor = tableView.leadingAnchor.constraint(equalTo: view.leadingAnchor)
        let trailingTableAnchor = tableView.trailingAnchor.constraint(equalTo: view.trailingAnchor)
...
