...
        label.textColor = .white
        label.translatesAutoresizingMaskIntoConstraints = false

        return label
    }()
    
    lazy var cardHolderLabel: UILabel = {
        let label = UILabel()
        label.accessibilityIdentifier = "cardHolderLabel"
        label.text = "Card Holder"
        label.numberOfLines = 1
        label.font = UIFont(name: "Futura-Bold", size: 16)
        label.minimumScaleFactor = 0.5
        label.textColor = .white
        label.translatesAutoresizingMaskIntoConstraints = false

        return label
    }()
    
    lazy var expiryDateLabel: UILabel = {
        let label = UILabel()
        label.accessibilityIdentifier = "expiryDateLabel"
        label.text = "Expiry Date"
        label.numberOfLines = 1
        label.font = UIFont(name: "Futura-Bold", size: 16)
        label.minimumScaleFactor = 0.5
...
